--- a/experiments/pb_obstacles/fullstate/config/tpc_cfg_rssm.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tpc_cfg_rssm.yaml
@@ -13,9 +13,9 @@ scheduler:
     start_factor: 1.
     end_factor: 1.
     total_iters: 1.
-batch_size: 128 
+batch_size: 16 
 epochs: 200
-accelerator: cpu
+accelerator: gpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
 loss:
@@ -31,7 +31,7 @@ data:
   data_path: ${experiment_cwd}/data/simple-contv1-failures-no-errors.zip
   save_path: ${save_path}
   batch_size: ${batch_size}
-  num_workers: 3
+  num_workers: 10
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
