--- a/experiments/pb_obstacles/fullstate/config/tpc_cfg_rssm.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tpc_cfg_rssm.yaml
@@ -31,11 +31,12 @@ data:
   data_path: ${experiment_cwd}/data/simple-contv1-failures-no-errors.zip
   save_path: ${save_path}
   batch_size: ${batch_size}
-  num_workers: 10
+  num_workers: 4
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
   shuffle: True  
+  length: 32
   n_reward_samples: 5
   n_options: ${model.n_options}
   n_out_feats: 4
