--- a/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
@@ -13,7 +13,7 @@ scheduler:
     start_factor: 1.
     end_factor: 1.
     total_iters: 1.
-batch_size: 128 
+batch_size: 256
 epochs: 200
 accelerator: gpu
 devices: 1
@@ -28,10 +28,10 @@ loss:
   initset_const: 1
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/simple-contv1-failures-no-errors.zip
+  data_path: ${experiment_cwd}/data/cont-v1-25-small.zip
   save_path: ${save_path}
   batch_size: ${batch_size}
-  num_workers: 3
+  num_workers: 4
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
