--- a/experiments/antmaze/configs/ground_initiset.yaml
+++ b/experiments/antmaze/configs/ground_initiset.yaml
@@ -1,22 +1,22 @@
 trainer:
   experiment_cwd: 'experiments/antmaze/antmaze-umaze-v2'
   save_path: ${trainer.experiment_cwd}/initset
-  epochs: 1000
+  epochs: 500
   accelerator: cpu
   devices: 1
-  lr: 1e-4
+  lr: 1e-5
 initset:
   type: mlp
   input_dim: 29
   output_dim: 8
-  hidden_dims: [256, 256]
-  activation: relu
+  hidden_dims: [256, 256, 256]
+  activation: silu
 data:
-  data_path: ${trainer.experiment_cwd}/data/data_1k.pkl
+  data_path: ${trainer.experiment_cwd}/data/data_10k.pkl
   save_path: ${trainer.save_path}
-  batch_size: 64
+  batch_size: 256
   num_workers: 0
-  train_split: 0.8
-  val_split: 0.1
-  test_split: 0.1
+  train_split: 0.9
+  val_split: 0.05
+  test_split: 0.05
   shuffle: True  
