--- a/experiments/pb_obstacles/fullstate/config/tpc_cfg_rssm_mixture.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tpc_cfg_rssm_mixture.yaml
@@ -2,6 +2,7 @@
 # Full State observation
 # Gridworld abstraction
 experiment_cwd: exp_results/pb_obstacles/fullstate
+model_config_dir: experiments/pb_obstacles/fullstate
 seed: 0
 optimizer:
   type: adam
@@ -13,8 +14,8 @@ scheduler:
     start_factor: 1.
     end_factor: 1.
     total_iters: 1.
-batch_size: 128 
-epochs: 200
+batch_size: 16 
+epochs: 500
 accelerator: cpu
 devices: 1
 save_path: ${experiment_cwd}/mdps
@@ -28,20 +29,21 @@ loss:
   initset_const: 1
   n_samples: 1
 data:
-  data_path: ${experiment_cwd}/data/simple-contv1-failures-no-errors
+  data_path: ${experiment_cwd}/data/cont-v1-25-small.zip
   save_path: ${save_path}
   batch_size: ${batch_size}
-  num_workers: 3
+  num_workers: 4
   train_split: 0.8
   val_split: 0.1
   test_split: 0.1
   shuffle: True  
+  length: 64
   n_reward_samples: 5
   n_options: ${model.n_options}
   n_out_feats: 4
   state_dim : 4
   obs_type: simple
-  gamma: 0.99
+  gamma: 0.9997
   noise_level: 0.0
   noise_dim: 0
   ar_coeff: 0.9
@@ -51,9 +53,9 @@ model:
   n_options: 4
   obs_dims: ${data.n_out_feats}
   latent_dim: 2
-  encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
-  decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp_critic.yaml}
-  transition: ${loadcfg:${experiment_cwd}/config/models/transition_maf.yaml}
-  init_class: ${loadcfg:${experiment_cwd}/config/models/init_class_mlp.yaml}
-  reward: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
-  tau: ${loadcfg:${experiment_cwd}/config/models/tau_mlp.yaml}
+  encoder: ${loadcfg:${model_config_dir}/config/models/encoder_mlp.yaml}
+  decoder: ${loadcfg:${model_config_dir}/config/models/decoder_mlp_critic.yaml}
+  transition: ${loadcfg:${model_config_dir}/config/models/transition_rssm_mixture.yaml}
+  init_class: ${loadcfg:${model_config_dir}/config/models/init_class_mlp.yaml}
+  reward: ${loadcfg:${model_config_dir}/config/models/reward_mlp.yaml}
+  tau: ${loadcfg:${model_config_dir}/config/models/tau_mlp.yaml}
