--- a/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
@@ -1,7 +1,8 @@
 # Config file for Pinball environment
 # Full State observation
 # Gridworld abstraction
-experiment_cwd: 'experiments/pb_obstacles/fullstate'
+experiment_cwd: exp_results/pb_obstacles/fullstate
+model_config_dir: experiments/pb_obstacles/fullstate/
 seed: 0
 optimizer:
   type: adam
@@ -41,7 +42,7 @@ data:
   n_out_feats: 4
   state_dim : 4
   obs_type: simple
-  gamma: 0.99
+  gamma: 0.9997
   noise_level: 0.0
   noise_dim: 0
   ar_coeff: 0.9
@@ -51,9 +52,9 @@ model:
   n_options: 4
   obs_dims: ${data.n_out_feats}
   latent_dim: 2
-  encoder: ${loadcfg:${experiment_cwd}/config/models/encoder_mlp.yaml}
-  decoder: ${loadcfg:${experiment_cwd}/config/models/decoder_mlp_critic.yaml}
-  transition: ${loadcfg:${experiment_cwd}/config/models/transition_gaussian.yaml}
-  init_class: ${loadcfg:${experiment_cwd}/config/models/init_class_mlp.yaml}
-  reward: ${loadcfg:${experiment_cwd}/config/models/reward_mlp.yaml}
-  tau: ${loadcfg:${experiment_cwd}/config/models/tau_mlp.yaml}
+  encoder: ${loadcfg:${model_config_dir}/config/models/encoder_mlp.yaml}
+  decoder: ${loadcfg:${model_config_dir}/config/models/decoder_mlp_critic.yaml}
+  transition: ${loadcfg:${model_config_dir}/config/models/transition_gaussian.yaml}
+  init_class: ${loadcfg:${model_config_dir}/config/models/init_class_mlp.yaml}
+  reward: ${loadcfg:${model_config_dir}/config/models/reward_mlp.yaml}
+  tau: ${loadcfg:${model_config_dir}/config/models/tau_mlp.yaml}
