--- a/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tpc_cfg_critic.yaml
@@ -32,6 +32,7 @@ data:
   data_path: ${experiment_cwd}/data/cont-v1-25-small.zip
   save_path: ${save_path}
   batch_size: ${batch_size}
+  length: 64
   num_workers: 4
   train_split: 0.8
   val_split: 0.1
