--- a/experiments/pb_obstacles/fullstate/config/ddqn_sim.yaml
+++ b/experiments/pb_obstacles/fullstate/config/ddqn_sim.yaml
@@ -26,13 +26,20 @@ agent:
   lr: 1e-4
   eval_random_agent: false
   gamma: ${env.gamma}
+  normalize_obs: false
 
 q_func: 
-  type: 'mlp'
   n_actions: 4
-  hidden_dims: [128, 128]
-  activation: relu
-  output_dim: ${q_func.n_actions}
+  ground:
+    type: 'mlp'
+    hidden_dims: [128, 128]
+    activation: relu
+    output_dim: ${q_func.n_actions}
+  abstract:
+    type: 'mlp'
+    hidden_dims: [128, 128]
+    activation: relu
+    output_dim: ${q_func.n_actions}
 
 experiment:
   seed: 31
