--- a/experiments/pb_obstacles/pixel/config/ddqn_sim.yaml
+++ b/experiments/pb_obstacles/pixel/config/ddqn_sim.yaml
@@ -14,48 +14,42 @@ env:
 
 agent:
   load: null
-  final_exploration_steps: 350000
+  final_exploration_steps: 200000
   final_epsilon: 0.1
   eval_epsilon: 0.001
-  replay_start_size: 1000
+  replay_start_size: 10000
   replay_buffer_size: 100000
-  target_update_interval: 1000
+  target_update_interval: 10000
   steps: 1000000
   update_interval: 5
   num_step_return: 1
-  lr: 0.0005
+  lr: 1e-4
   eval_random_agent: false
   gamma: ${env.gamma}
   normalize_obs: false
 
 q_func: 
+  type: 'mlp'
   n_actions: 4
-  ground:
-    type: 'mlp'
-    hidden_dims: [128, 128]
-    activation: relu
-    output_dim: ${q_func.n_actions}
-  abstract:
-    type: 'mlp'
-    hidden_dims: [128, 128]
-    activation: relu
-    output_dim: ${q_func.n_actions}
+  hidden_dims: [128, 128]
+  activation: relu
+  output_dim: ${q_func.n_actions}
 
 experiment:
   seed: 31
   gpu: -1
   demo: false
-  eval_interval: 2500
+  eval_interval: 25000
   eval_n_runs: 10
   log_level: 20
   checkpoint_frequency: null
   max_episode_len: 100
-  log_tensorboard: true
+  log_tensorboard: false
   outdir: planning_ddqn
   finetune: false
 
 finetuning:
-  final_exploration_steps: 30000
+  final_exploration_steps: 200000
   final_epsilon: 0.1
   eval_epsilon: 0.001
   target_update_interval: 1000
