--- a/experiments/pb_obstacles/fullstate/config/online_planner.yaml
+++ b/experiments/pb_obstacles/fullstate/config/online_planner.yaml
@@ -30,7 +30,7 @@ world_model:
   sample_transition: true
   model_success: false
   gamma: ${planner.env.gamma}
-  
+  fixed_modules: [encoder, ]
   model:
     model_config_dir: experiments/pb_obstacles/fullstate/
     n_options: 4
