--- a/experiments/pb_obstacles/fullstate/config/tune.yaml
+++ b/experiments/pb_obstacles/fullstate/config/tune.yaml
@@ -1,11 +1,11 @@
-study_name: mixture
-storage: exp_results/pb_obstacles/fullstate/mixture.db
+study_name: mixture_pinball
+storage: exp_results/pb_obstacles/fullstate/
 direction: maximize
 seed: null
-
+aggregator: mean
 sampler: TpeSampler
-steps_budget: 10000000
-n_trials: 12
+steps_budget: 16000000
+n_trials: 15
 n_jobs: -1
 
 pruner:
