experiments with fully obs egocentric antmaze

--- a/experiments/antmaze/config/models/decoder_mlp_critic.yaml
+++ b/experiments/antmaze/config/models/decoder_mlp_critic.yaml
@@ -1,11 +1,8 @@
 
-type: mlp_critic
-input_dim: ${model.obs_dims}
-latent_dim: ${model.latent_dim}
+type: mlp
+input_dim: 64
 output_dim: 1
 hidden_dims:
-  - 64
-  - 64
-  - 64
-  - 64
-activation: relu
+  - 512
+  - 512
+activation: silu
