rainbow running in baselines

--- a/experiments/antmaze/egocentric/baseline_cfg.yaml
+++ b/experiments/antmaze/egocentric/baseline_cfg.yaml
@@ -1,5 +1,30 @@
 seed: 0
 
+rainbow_gt:
+  q_func:
+    n_actions: 3
+    type: mlp
+    input_dim: 7
+    hidden_dims:
+    - 512
+    - 512
+    activation: mish
+    output_dim: 1024
+  experiment:
+    load: null
+    final_exploration_steps: 0.4 # proportion of agent trainings steps to decay the epsilon
+    final_epsilon: 0.1
+    eval_epsilon: 0.001
+    replay_start_size: 100
+    replay_buffer_size: 100000
+    target_update_interval: 5000
+    update_interval: 5
+    num_step_return: 3
+    steps: ${trainer.steps}
+    lr: 3e-4
+    gpu: ${trainer.gpu}
+    gamma: ${env.gamma}
+
 rainbow:
   q_func:
     type: multicnnencoder
@@ -41,10 +66,10 @@ rainbow:
     final_epsilon: 0.1
     eval_epsilon: 0.001
     replay_start_size: 100
-    replay_buffer_size: 100000
+    replay_buffer_size: 1000000
     target_update_interval: 5000
     update_interval: 5
-    num_step_return: 1
+    num_step_return: 3
     steps: ${trainer.steps}
     lr: 3e-4
     gpu: ${trainer.gpu}
